--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  background-image: url(/bg..webp);
 }
 
 .header h4 {
